# DuckyClaw

./: .gitignore  CMakeLists.txt  Kconfig  README.md  TODOs.md
.github/workflows/: release.yml
IM/: CMakeLists.txt  Kconfig  im_api.h  im_config.h
IM/bus/: message_bus.h
IM/channels/: README_weixin.md  discord_bot.c  feishu_bot.c  feishu_bot.h  weixin_bot.c  weixin_bot.h  weixin_bot.py
IM/proxy/: http_proxy.c
agent/: agent_loop.c  context_builder.c
ai_components/ai_agent/include/: ai_agent.h
ai_components/ai_agent/src/: ai_agent.c
ai_components/ai_audio/src/: ai_audio_input.c
ai_components/ai_main/include/: ai_chat_main.h
ai_components/ai_main/src/: ai_chat_main.c  ai_chat_ui.c
ai_components/ai_mcp/include/: ai_mcp_server.h
ai_components/ai_mcp/src/: ai_mcp_server.c
ai_components/ai_picture/include/: ai_picture_output.h
ai_components/ai_picture/src/: ai_picture_output.c
ai_components/ai_skills/src/: ai_skill.c  skill_cloudevent.c  skill_emotion.c  skill_music_story.c
ai_components/ai_ui/include/: ai_ui_icon_font.h
ai_components/ai_ui/src/: ai_ui_icon_font.c
ai_components/ai_video/src/: ai_video_input.c
config/: ATK_T5AI_MINI_BOARD_2.4LCD_CAMERA.config  DshanPi_A1.config  ESP32S3_BREAD_COMPACT_WIFI.config  RaspberryPi.config  TUYA_T5AI_BOARD_LCD_3.5_CAMERA(NO_SDCARD).config  TUYA_T5AI_BOARD_LCD_3.5_CAMERA.config  TUYA_T5AI_CORE.config  WAVESHARE_T5AI_TOUCH_AMOLED_1_75.config
cron_service/: cron_service.c  cron_service.h
gateway/: acp_client.c  acp_client.h  ws_server.c  ws_server.h
heartbeat/: heartbeat.c
include/: ai_ui_icon_font.h  app_base_config.h  app_config_kv.h  app_im.h  sys_bus.h  tuya_app_config.h  tuya_app_config_secrets.h.example
memory/: memory_manager.c  memory_manager.h  session_manager.c  session_manager.h
skills/: skill_loader.c  skill_loader.h
src/: app_cli_cmd.c  app_im.c  cli_cmd.c  ducky_claw_chat.c  reset_netcfg.c  sys_bus.c  tuya_app_main.c  tuya_main.c
src/agent/: agent_loop.c  agent_loop.h  context_builder.c
tools/: Kconfig  duckyclaw.py  tool_cron.c  tool_exec.c  tool_exec.h  tool_files.c  tool_files.h  tool_hw.c  tool_hw.h  tool_openclaw_ctrl.c  tool_openclaw_ctrl.h  tools_register.c  uart_cmd.c  uart_cmd.h
ui/: ai_ui_icon_font.c
